Update styles.css and fixed logo spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,8 @@ body {
 
 #header h1 {
   position: absolute;
-  left: 420px;
-  top: 5px;
+  left: 150px;   /* moves text right of the logo */
+  top: 20px;
   font-size: 3em;
   font-family: 'Devonshire', cursive;
   color: #E35335;
@@ -123,3 +123,4 @@ strong {
   font-weight: 900;
 
 }
+
